--- a/inst/NEWS.txt
+++ b/inst/NEWS.txt
@@ -10,3 +10,9 @@ Changes in Version 0.1.0 (2019-11-04)
 =====================================
 
 * Package created
+
+
+Changes in Version 1.5.1 (2021-06-18)
+=====================================
+
+* Added `markdown` to Suggests in DESCRIPTION to resolve new changes in `knitr`
